# Final_Project

./: README.md  project-tree.txt  pyproject.toml
.github/workflows/: cd.yml  ci.yml
Airflow/: docker-compose.yaml
Airflow/dags/: jobs_data_dag.py  jobs_data_dag.py.py  multijob_transformed.py  upload_table.py
FastAPI_Services/: main.py
PoC/: jobserp.py  singlePageGettingExtracted.py  software_engineer_jobs.csv  software_engineer_jobs.json  tech_jobs.csv
PoC/Serp_jobs/: jobserp.py  jobserp_multijob_dated.py  tech_jobs1.csv  tech_jobs1.json
Streamlit_UI_App/: Home.py  utils.py
Streamlit_UI_App/pages/: 1_Login_Signup.py  2_Intelligent_Job_Search.py  2_🔍 Intelligent_Job_Search.py  3_Application_Materials.py  3_Saved_Jobs.py  3_📂Saved_Jobs.py  4_Application_Materials.py  4_Saved_Jobs.py  6_📋Job_Listings_Analytics.py
