[tool.poetry]
name = "fp-lm"
version = "0.1.0"
description = ""
authors = ["viswanath"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "^0.115.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"
boto3 = "^1.35.71"
snowflake-connector-python = "^3.12.3"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"
python-multipart = "^0.0.18"
platformdirs = "^4.3.6"
uvicorn = "^0.32.1"
bcrypt = "^4.2.1"
app = "^0.0.1"
pytest = "^8.3.3"
httpx = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
